[package]
name = "wints"
version = "0.5.0"
edition = "2018"
authors = ["Romain Lespinasse <romain.lespinasse@gmail.com>"]
description = "wints is a fuzzy term-based URLs opener"
readme = "CRATES.md"
license-file = "LICENSE"
documentation = "https://docs.rs/wints"
repository = "https://github.com/rlespinasse/wints"
keywords = ["fuzzy-matching", "command-line", "url"]
categories = ["command-line-utilities"]

[lib]
name = "wints"
path = "src/wints/lib.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
directories-next = "2.0"
fuzzy-matcher = "0.3"
glob = "0.3"
grep = "0.3"
ignore = "0.4"
linkify = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
webbrowser = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
